Added some tests.